--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Import do Bootstrap NPM -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Import do CSS local -->
     <link rel="stylesheet" href="/css/estilo.css">
     <title>Charada 01</title>
 </head>
@@ -20,7 +21,7 @@
             <div class="card-body">              
               <p class="card-text">Esse cãozinho é bem popular.</p>
               <div class="container mb-3">
-                  <input class="form-control" type="text" placeholder="Digite sua resposta aqui" aria-label="default input example">
+                  <input class="form-control" id="resposta01" type="text" placeholder="Digite sua resposta aqui" aria-label="default input example">
               </div>
               
               <a href="#" class="btn btn-primary">Responder</a>
