Ajuste nos espaçamentos dos elementos e esconder a Figcaption de dica no meio da imagem

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container container-fluid ">
         <h1 class="tituloPrincipal">Jogo Charada Brasileira</h1>
         <div class="card" style="width: 100%">
-            <img src="/img/pexels-anil-sharma-10556334.jpg" class="card-img-top" alt="Um dachshund no mato">
-            <div class="card-body">              
-              <p class="card-text">Esse cãozinho é bem popular.</p>
-              <div class="container mb-3">
-                  <input class="form-control" id="resposta01" type="text" placeholder="Digite sua resposta aqui" aria-label="default input example">
-              </div>
-              
+            <figure class="figure">
+                <img src="/img/pexels-anil-sharma-10556334.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <figcaption class="figure-caption">Tente no diminutivo</figcaption>
+            </figure>            
+            <div class="card-body ">              
+              <p class="card-text">Esse cãozinho é bem popular.</p>              
+              <input class="form-control mb-3" id="resposta" type="text" placeholder="Digite sua resposta aqui" aria-label="area de resposta">
               <a href="#" class="btn btn-primary">Responder</a>
             </div>
         </div>
