--- a/pergunta02.html
+++ b/pergunta02.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Import do CSS local -->
     <link rel="stylesheet" href="/css/estilo.css">
-    <title>Charada 01</title>
+    <title>Charada 02</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img src="/img/imgPergunta2.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <img src="/img/imgPergunta02.jpg" class="figure-img img-fluid rounded" alt="Um prédio muito alto">
                 <figcaption class="figure-caption">Acentos e ifen importam</figcaption>
             </figure>      
             <!-- corpo  -->
