--- a/pergunta03.html
+++ b/pergunta03.html
@@ -9,24 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Import do CSS local -->
     <link rel="stylesheet" href="/css/estilo.css">
-    <title>Charada 01</title>
+    <title>Charada 03</title>
 </head>
 
 <body>
     <!-- Colocando todo o conteúdo em um container para ser responsível com as classes do Bootstrap  -->
     <div class="container container-fluid ">
         <!-- título principal -->
-        <h1 class="tituloPrincipal">Pergunta 02</h1>
+        <h1 class="tituloPrincipal">Pergunta 03</h1>
 
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img src="/img/pexels-anil-sharma-10556334.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
-                <figcaption class="figure-caption">Tente no diminutivo</figcaption>
+                <img src="/img/imgpergunta03.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <figcaption class="figure-caption">DC</figcaption>
             </figure>      
             <!-- corpo  -->
             <div class="card-body ">              
-              <p class="card-text">Esse cãozinho é bem popular.</p>              
+              <p class="card-text">Pode ele ser malvado? </p>              
               <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui" aria-label="area de resposta">
               <!-- Função do "onclick" confere a respota antes de redirecionar para próxima página  -->
               <a href="#" class="btn btn-primary" onclick="confereResposta()">Responder</a>
@@ -36,10 +36,10 @@
 
     <script>
         function confereResposta() {
-            respostaCerta = "Salsichinha"
+            respostaCerta = "Coringa"
             const respostaDoUsuario = document.getElementById("inputResposta");
             if (respostaDoUsuario.value === respostaCerta) {
-                window.location.href = '/pergunta03.html'
+                window.location.href = '/pergunta01.html'
             } else {
                 alert("Resposta errada, tente outra vez.");
                 respostaDoUsuario.value = "";
