Alterado texto do ALT da figura 3

--- a/pergunta03.html
+++ b/pergunta03.html
@@ -21,7 +21,7 @@
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img src="/img/imgpergunta03.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <img src="/img/imgpergunta03.jpg" class="figure-img img-fluid rounded" alt="Um palhaço">
                 <figcaption class="figure-caption">DC</figcaption>
             </figure>      
             <!-- corpo  -->
