--- a/pergunta01.html
+++ b/pergunta01.html
@@ -8,7 +8,7 @@
     <!-- Import do Bootstrap NPM -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Import do CSS local -->
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>Charada 01</title>
 </head>
 
@@ -21,7 +21,7 @@
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img src="/img/imgPergunta01.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <img src="./img/imgPergunta01.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
                 <figcaption class="figure-caption">Tente no diminutivo</figcaption>
             </figure>      
             <!-- corpo  -->
@@ -34,21 +34,7 @@
         </div>
     </div>
 
-    <script>
-        function confereResposta() {
-            respostaCerta = "salsichinha"
-            const respostaDoUsuario = document.getElementById("inputResposta");
-            if (respostaDoUsuario.value === respostaCerta) {
-                // redirecionar para página 2
-                window.location.href = '/pergunta02.html'
-            } else {
-                alert("Resposta errada, tente outra vez.");
-                respostaDoUsuario.value = "";
-                respostaDoUsuario.focus();
-            }
-            
-        }
-    </script>
+    <script type="text/javascript" src="./script/scripts.js"></script>
     
 </body>
 </html>
