--- a/pergunta02.html
+++ b/pergunta02.html
@@ -8,7 +8,7 @@
     <!-- Import do Bootstrap NPM -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Import do CSS local -->
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>Charada 02</title>
 </head>
 
@@ -21,7 +21,7 @@
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img src="/img/imgPergunta02.jpg" class="figure-img img-fluid rounded" alt="Um prédio muito alto">
+                <img src="./img/imgPergunta02.jpg" class="figure-img img-fluid rounded" alt="Um prédio muito alto">
                 <figcaption class="figure-caption">Acentos e ifen importam</figcaption>
             </figure>      
             <!-- corpo  -->
