Adicionada: Submeter resposta quando pressionar o Enter

--- a/pergunta01.html
+++ b/pergunta01.html
@@ -27,7 +27,8 @@
             <!-- corpo  -->
             <div class="card-body ">              
               <p id="texto" class="card-text">Esse cãozinho é bem popular.</p>              
-              <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui" aria-label="area de resposta">
+              <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui" 
+                aria-label="area de resposta" />
               <!-- Função do "onclick" confere a respota antes de redirecionar para próxima página  -->
               <a href="#" class="btn btn-primary" onclick="confereResposta()">Responder</a>
             </div>
