inclusão do script para alterar o conteúdo da página

--- a/pergunta01.html
+++ b/pergunta01.html
@@ -16,7 +16,7 @@
     <!-- Colocando todo o conteúdo em um container para ser responsível com as classes do Bootstrap  -->
     <div class="container container-fluid ">
         <!-- título principal -->
-        <h1 id="tituloPrincipal" class="tituloPrincipal">Pergunta 01</h1>
+        <h1 id="titulo" class="tituloPrincipal">Pergunta 01</h1>
 
         <div class="card" style="width: 100%">
             <!-- Figura -->
