Tentativa de fazer a função confereResposta() alterar valor da variável faseAtual

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img id="imagem" src="./img/imgPergunta01.jpg" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <img id="imagem" src="#" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
                 <figcaption id="dica" class="figure-caption">Tente no diminutivo</figcaption>
             </figure>      
             <!-- corpo  -->
