Encapsulando funçoes  - Falta ajustar chamada da função ConfereResposta

--- a/index.html
+++ b/index.html
@@ -16,21 +16,20 @@
     <!-- Colocando todo o conteúdo em um container para ser responsível com as classes do Bootstrap  -->
     <div class="container container-fluid ">
         <!-- título principal -->
-        <h1 id="titulo" class="tituloPrincipal">Pergunta 01</h1>
+        <h1 id="titulo" class="tituloPrincipal"></h1>
 
         <div class="card" style="width: 100%">
             <!-- Figura -->
             <figure class="figure">
-                <img id="imagem" src="#" class="figure-img img-fluid rounded" alt="Um dachshund no mato">
+                <img id="imagem" src="#" class="figure-img img-fluid rounded" alt="">
                 <figcaption id="dica" class="figure-caption">Tente no diminutivo</figcaption>
             </figure>      
             <!-- corpo  -->
             <div class="card-body ">              
-              <p id="texto" class="card-text">Esse cãozinho é bem popular.</p>              
+              <p id="texto" class="card-text"></p>              
               <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui" 
                 aria-label="area de resposta" />
-              <!-- Função do "onclick" confere a respota antes de redirecionar para próxima página  -->
-              <a href="#" class="btn btn-primary" onclick="confereResposta()">Responder</a>
+              <a href="#" class="btn btn-primary" onclick="">Responder</a>
             </div>
         </div>
     </div>
