Solucionado problema da função ConfereResposta, excluído o import do Axios

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <p id="texto" class="card-text"></p>              
               <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui" 
                 aria-label="area de resposta" />
-              <a href="#" class="btn btn-primary" onclick="confereResp()">Responder</a>
+              <a href="#" class="btn btn-primary" onclick="PegaResposta()" >Responder</a>
             </div>
         </div>
     </div>
