Usando funções assincronas para fazer requisição ao local service

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input class="form-control mb-3" id="inputResposta" type="text" placeholder="Digite sua resposta aqui"
                     aria-label="area de resposta" />
                 <!-- botão -->
-                <a href="#" class="btn btn-primary" onclick="PegaResposta()">Responder</a>
+                <a id="botao-confirmar" href="#" class="btn btn-primary" >Responder</a>
             </div>
         </div>
     </div>
